# HDBANK

./: .env  CSV_Parquet_JDBC_HDFS.py  Dockerfile  JDBC.py  JDBC_GUIDE.md  README.md  cache_repartition_lazyEvaluation.py  connect_deploy.ps1  data.csv  database.sql  docker-compose.yml  get-api-key.sh  i18n.json  instance_mywebserver.pem  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  server.py  serverless.yml
.github/workflows/: ci.yml
.serverless/: cloudformation-template-update-stack.json  meta.json  requirements  serverless-state.json
app/: main.py
app/core/: config.py  security.py
app/db/: base.py  init_db.py  session.py
app/schemas/: account.py  class_.py  faculty.py  grade.py  student.py  subject.py  teacher.py
app/services/: account_service.py  class_service.py  faculty_service.py  grade_service.py  student_service.py  subject_service.py  teacher_service.py
boto3_s3/: displayImage.html  main.py  main2.py  main3.py  pyproject.toml
content/: JDBC.py  hdbank_data_platform.py  hdfs_integration.py  hdfs_postgresql_integration.py  simple_jdbc.py  sql_vs_dataframe_benchmark.py
content/students.csv/: .part-00000-4cbc8ca4-414b-4143-a7a3-956e340258fc-c000.csv.crc  .part-00001-4cbc8ca4-414b-4143-a7a3-956e340258fc-c000.csv.crc  .part-00002-4cbc8ca4-414b-4143-a7a3-956e340258fc-c000.csv.crc  .part-00003-4cbc8ca4-414b-4143-a7a3-956e340258fc-c000.csv.crc  part-00000-4cbc8ca4-414b-4143-a7a3-956e340258fc-c000.csv  (+11 more)
i18n/: en.json
pyspark/: pyspark_01.py  pyspark_02.py
serverless/: db_connection.py  package-lock.json  serverless.yml
(+54 files in other folders)
