[project]
name = "quanlysinhvien"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "asyncpg==0.29.0",
    "fastapi==0.104.1",
    "httpx==0.25.1",
    "passlib[bcrypt]==1.7.4",
    "pydantic==2.4.2",
    "pydantic-settings==2.0.3",
    "pyjwt>=2.10.1",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "python-dotenv==1.0.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "uvicorn==0.24.0",
]
